--- a/public_html/estilosindex.css
+++ b/public_html/estilosindex.css
@@ -8,3 +8,60 @@ and open the template in the editor.
     Author     : Roger
 */
 
+ * {
+  padding: 0;
+  margin: 0;
+}
+p {
+  margin-bottom: 20px;
+}
+.wrapper {
+  width: 80%;
+  margin: auto;
+  overflow:hidden;
+}
+header {
+  background: rgba(0,0,0,0.9);
+  width: 100%;
+  position: fixed;
+  z-index: 10;
+}
+
+nav {
+  float: left; /* Desplazamos el nav hacia la izquierda */
+}
+nav ul {
+  list-style: none;
+  overflow: hidden; /* Limpiamos errores de float */
+}
+nav ul li {
+  float: left;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+}
+nav ul li a {
+  display: block; /* Convertimos los elementos a en elementos bloque para manipular el padding */
+  padding: 20px;
+  color: #fff;
+  text-decoration: none;
+}
+nav ul li:hover {
+  background: #3ead47;
+}
+.contenido {
+  padding-top: 80px;
+}
+html, body {
+height: 100%; 
+}
+* {
+margin: 0;  
+}
+#contenidoprincipal  {
+height: 50%;  
+}
+#piedepagina {
+    text-align: center;
+height: 50px;  
+margin-top: -50px;  
+}
